compile.c: use correct key for block when loading serialized iseqs

* compile.c (iseq_build_from_ary_body): Use :blockptr instead of :block
  as hash key when loading serialized instruction sequences from arrays.
  [Bug #9455] [ruby-core:60146]

git-svn-id: svn+ssh://svn.ruby-lang.org/ruby/trunk@44720 b2dd03c8-39d4-4d8f-98ff-823fe69b080e