compile.c
@@ -5808,7 +5808,7 @@ iseq_build_from_ary_body(rb_iseq_t *iseq, LINK_ANCHOR *anchor,
 				VALUE vmid = rb_hash_aref(op, ID2SYM(rb_intern("mid")));
 				VALUE vflag = rb_hash_aref(op, ID2SYM(rb_intern("flag")));
 				VALUE vorig_argc = rb_hash_aref(op, ID2SYM(rb_intern("orig_argc")));
-				VALUE vblock = rb_hash_aref(op, ID2SYM(rb_intern("block")));
+				VALUE vblock = rb_hash_aref(op, ID2SYM(rb_intern("blockptr")));
 
 				if (!NIL_P(vmid)) mid = SYM2ID(vmid);
 				if (!NIL_P(vflag)) flag = NUM2ULONG(vflag);
